[package]
name = "uncover"
version = "0.1.1"

authors = ["Aleksey Kladov <aleksey.kladov@gmail.com>"]
repository = "https://github.com/matklad/uncover"
license = "MIT OR Apache-2.0"
description = "A library to verify that a test covers specific code."

categories = ["development-tools::testing"]

[dependencies]
lazy_static = "1"

[dev-dependencies]
crossbeam = "0.2"

[[example]]
name = "parse_date"
crate_type = ["lib"]
